5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1644_2711.log
== TEST (2019-04-11 11:40:16) 
-- CODE:
valor = float(input("Valor Disponivel: "))
qtRU = int(input("Tickets do RU: "))
Vtickets = float(input("Valor dos Tickets: "))
QPbus = int(input("Quantidade de pessoas no bus: "))
Vpasses = float(input("Valor dos passes: "))

-- ERROR:
File "XXXX", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:41:50) 
-- CODE:
valor = float(input("Valor Disponivel: "))
qtRU = int(input("Tickets do RU: "))
Vtickets = float(input("Valor dos Tickets: "))
QPbus = int(input("Quantidade de passes de onibus:"))
Vpasses = float(input("Valor dos passes: "))

-- ERROR:
File "XXXX", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:45:02) 
-- CODE:
valor = float(input("Valor Disponivel: "))
qtRU = int(input("Tickets do RU: "))
Vtickets = float(input("Valor dos Tickets: "))
QPbus = int(input("Quantidade de passes de onibus:"))
Vpasses = float(input("Valor dos passes: "))
valor - qtRU*Vtickets
-- ERROR:
File "XXXX", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:34:19) 
-- CODE:
valor = float(input("Valor Disponivel: "))
qtRU = int(input("Tickets do RU: "))
Vtickets = float(input("Valor dos Tickets: "))
QPbus = int(input("Quantidade de passes de onibus:"))
Vpasses = float(input("Valor dos passes: "))
valor - qtRU*Vtickets
-- ERROR:
File "XXXX", line 2
    pagamento = float(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:37:59) 
-- CODE:
valor = float(input("Valor Disponivel: "))
qtRU = int(input("Tickets do RU: "))
Vtickets = float(input("Valor dos Tickets: "))
QPbus = int(input("Quantidade de passes de onibus:"))
Vpasses = float(input("Valor dos passes: "))
if (valor >= (qtRU  Vtickets)+ (QPbus*Vpasses)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
File "XXXX", line 6
    if (valor >= (qtRU  Vtickets)+ (QPbus*Vpasses)):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:38:31) 
-- CODE:
valor = float(input("Valor Disponivel: "))
qtRU = int(input("Tickets do RU: "))
Vtickets = float(input("Valor dos Tickets: "))
QPbus = int(input("Quantidade de passes de onibus:"))
Vpasses = float(input("Valor dos passes: "))
if (valor >= (qtRU *Vtickets)+ (QPbus*Vpasses)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.150173
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
